--- a/src/app/pages/auth/signup/signup.component.css
+++ b/src/app/pages/auth/signup/signup.component.css
@@ -95,3 +95,9 @@ font-size: 14px;
 .btn:hover{
   background-color: deeppink;
 }
+.eye{
+  position: relative;
+  right: 15px;
+
+  cursor: pointer;
+}
