--- a/src/app/pages/home/footer/footer.component.html
+++ b/src/app/pages/home/footer/footer.component.html
@@ -1,8 +1,7 @@
+<!-- <footer  id="row" class="text-center text-lg-start bg-light text-muted"  >
 
-<footer  id="row" class="text-center text-lg-start bg-light text-muted"  >
-  <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-    <!-- Left -->
+
     <div class="me-5 d-none d-lg-block  p-4">
       <span>Shere With Us :</span>
     </div>
@@ -31,5 +30,35 @@
     <h3> Capstone Project</h3>
   </div>
 </section>
-</footer>
+</footer>-->
+<footer >
 
+<div class="row" >
+
+  <div class="col">
+   Shere With Us :
+    <share-buttons
+[include]="['facebook','linkedin', 'twitter']"
+[showIcon]="true"
+[showText]="false"
+url="https://rodrigo.kamada.com.br/"
+ description="Angular Share Buttons"
+ twitterAccount="rodrigokamada"
+  >
+</share-buttons>
+  </div>
+
+
+  <div class="col">
+Contact:
+    <h4> shathaaldbee@gmail.com</h4>
+  </div>
+
+
+  <div class="col">
+ © 2023 Copyright:
+    <a class="text-reset">Shatha ALdebei</a>
+   <h3> Capstone Project</h3>
+  </div>
+</div>
+</footer>
