--- a/src/app/core/components/layouts/header/header/header.component.css
+++ b/src/app/core/components/layouts/header/header/header.component.css
@@ -1,198 +1,342 @@
 .header{
-min-height: 100vh;
-width: 100%;
-background-image: Url(' https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/M%C3%BCnster%2C_LVM%2C_B%C3%BCrogeb%C3%A4ude_--_2013_--_5149-51.jpg?alt=media&token=1f5d1e54-39c8-43cf-9c30-0961bfe64a8e');
-background-size: cover;
-position: relative;
-}
-
-
-
-
-nav{
-display: flex;
-justify-content: space-between !important;
-padding: 2% 6%;
-align-items: center;
-z-index: 50;
-background: none;
-position: fixed;
-width: 100%;
- transition:.3s;
-
-
-
-
-
-}
-.right{
-  display: flex;
-  align-items: center;
-
-}
-nav .left img{
-  width: 180px;
-height: 80px;
-
-
-
-}
-.nav-links{
-  flex: 1;
-  text-align: right;
-
-
-}
-.nav-links ul li{
-list-style: none;
-display: inline-block;
-padding: 0 12px;
-position: relative;
-}
-.nav-links ul li a{
-color: rgb(255, 205, 228);
-text-decoration: none;
-font-size: 18px;
-}
-.btn{
-  border-radius: 50px;
-  font-size: 15px;
-}
-.btn-1{
-  font-weight:400;
-  font-size: 18px;
-}
-
-
-
-.nav-links ul li a:hover{
-color: rgb(78, 38, 38);
-transition: .4s;
-
-
-}
-.text-box{
-width: 90%;
-color: hsl(0, 100%, 99%);
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-50%);
-
-}
-.text-box h1{
-  font-size: 50px;
-  color: rgb(124, 27, 72);
-  font-weight: 600px;
-  margin: 10px;
-  padding-bottom: 10px;
-
-}
-.text-box p{
-  margin:0 0 40px ;
-  font-size: 18px;
-  color: rgb(5, 26, 43);
-  width: 350px;
-
-}
-.text-box a{
-  text-decoration: none;
-width: 140px;
-position: relative;
-left: 4rem;
-cursor: pointer;
-padding: 12px 30px ;
-color: #fff;
-color: black;
-font-size: 18px;
-font-style: italic;
-text-shadow:1px 2px 0 #e66bbd;
-border:2px solid white;
-font-weight: 500;
-}
-.text-box a:hover{
-background: brown;
-transition: 1s;
-border: solid 2px purple;
-}
-#icon {
-  display: none;}
-@media screen and (min-width:701px) {
-  .auth-btns-above700{
-    display: none !important ;
+  min-height: 100vh;
+  width: 100%;
+  background-image: Url(' https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/M%C3%BCnster%2C_LVM%2C_B%C3%BCrogeb%C3%A4ude_--_2013_--_5149-51.jpg?alt=media&token=1f5d1e54-39c8-43cf-9c30-0961bfe64a8e');
+  background-size: cover;
+  position: relative;
+  background-attachment: fixed;
   }
-}
-@media(max-width :700px){
-  .auth-btns-above700{
-    display: block !important;
+
+
+  .header_fixed{
+    background:rgb(253, 250, 250);
+      opacity: 1;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      padding-top: 30px;
+      padding-bottom: 20px;
+      box-shadow: 2px 4px 10px rgba(98, 98, 98, 0.3);
+
   }
-  .auth-btns{
-    display: none !important;
+
+
+
+  nav{
+    font-size: .8rem;
+    position: fixed;
+    z-index: 50;
+    background: none;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between !important;
+    z-index: 50;
+    transition:.3s;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    padding: 0 54px;
+    height: 70px;
   }
-  .text-box h1{  font-size: 30px; }
-  .text-box p{    font-size: 10px;             }
-  .nav-links ul li{
-display: block;
-  }
-  .text-box a{padding:0 4px ;
-    left: 24px;
-    font-size: 10px;
-  }
-  .nav-links {
-position: absolute;
-background: #43616d;
-height: 100vh;
-width:200px ;
-top: 0;
-right:-200px;
-text-align: left;
-z-index: 2;
-padding:30px 0;
-transition: .4s ease-in-out;
+  .right{
+    display: flex;
+    align-items: center;
 
   }
   nav .left img{
-    width: 100px;
-    height: 50px;
+    width:120%;
+  height: 100px;
+
+  }
+  .nav-links{
+    flex: 1;
+    text-align: right;
+
+
+  }
+  .nav-links ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 0 12px;
+  position: relative;
+
+  }
+  .nav-links ul li a{
+  color: rgb(245, 181, 209);
+  text-decoration: none;
+  font-size: 1rem;
+
+
+  }
+  .btn{
+    border-radius: 50px;
+    font-size: 15px;
+background-color: rgb(136, 53, 91) !important;
+color: #fff !important;
+
+  }
+  .btn-1{
+    font-weight:400;
+    font-size: 18px;
+
+font-size: 1.2rem  }
+
+
+
+  .nav-links ul li a:hover{
+  color: rgb(78, 38, 38);
+  transition: .4s;
+
+
+  }
+  .text-box{
+    padding: 80px 0;
+
+  width: 90%;
+  color: hsl(0, 100%, 99%);
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+
+  }
+  .text-box h1{
+    font-size: 32px;
+    color: rgb(124, 27, 72);
+
+    margin: 10px;
+    padding-bottom: 20px;
+    font-weight: 800;
+
+  }
+  .text-box p{
+    margin:10px 0 60px ;
+    font-size: 18px;
+    color: rgb(245, 181, 209);
+    padding-left: 0;
+align-content: center;
+gap: 20px;
+line-height: 1.8;
+  }
+  .text-box a{
+    text-decoration: none;
+  width: 160px;
+  position: relative;
+  left: 4rem;
+  cursor: pointer;
+  padding: 12px 34px ;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  background-color: rgb(124, 27, 72);
+  border-radius: 6px;
+
+
+  }
+  .text-box a:hover{
+    opacity: .9;
+
+  }
+  #icon {
+    display: none;
+}
+
+  @media screen and (min-width:701px) {
+    .auth-btns-above700{
+      display: none !important ;
+    }
+
+  }
+  @media(max-width :780px){
+    nav{
+      height: fit;
+      padding: 0 20px;
+    }
+    .auth-btns-above700{
+      display: block !important;
+
+    }
+    .auth-btns{
+      display: none !important;
+    }
+    .text-box h1{  font-size: 18px;     padding-bottom: 10px;
+    }
+    .text-box p{    font-size: 12px;
+            }
+    .nav-links ul li{
+  display: block;
+    }
+    .text-box a{width: 140px;
+      left: 24px;
+      font-size: 14px;
+      position: relative;
+    bottom: 2rem;
+    }
+    .nav-links ul li a{
+      right:-200px;
+      color: rgb(14, 9, 41);
+      text-shadow: 2px 2px 4px #a3a3a3;
+    }
+
+    .nav-links {
+
+  position: absolute;
+  background-color:rgb(253, 250, 250);
+  height: 100vh;
+  width:200px ;
+  top: 0;
+  right:-200px;
+  text-align: left;
+  z-index: 2;
+  transition: .4s ease-in-out;
+
+    }
+
+
+    nav .left img{
+      width: 100%;
+      height: 50px;
+      padding-right: 0;
+    }
+
+    .left{
+      width: 120px;
+    }
+      #icon{
+        display: block;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+      }
+   .nav-links ul { padding: 20px 30px;}
+   .nav-links ul li { padding: 10px 0 10px ;
+
+
+  }
+  .nav-links ul li::after {content: '';
+    height: 3px;
+    width: 0;
+background:#bd549a ;
+position: absolute;
+left: 0;
+bottom: -1.2px;
+transition: .2s;
+  }
+  .nav-links ul li:hover:after {
+width: 68%;
+  }
+      button {
+         font-size: 10px;
+        width:60px ;
+        height:24px ;
+       position: relative;
+       top:  2px;
+  left: 6%;
+  display: block;
+  padding: 0;
+
+      }
+  .menuClass{
+    right: 0;
+  }
+  .btn-1{       font-size: 12px;
+    position: relative;
+    left: 14%;
+    font-weight: 500;
+  }
+  .btn{
+    font-size: 10px;
+    position: relative;
+    left: 8%;
+    width:60px ;
+    height:30px ;
+
+  }
+  .text-box{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+  }
   }
 
-    #icon{
-      display: block;
-      margin: 10px;
-      font-size: 22px;
-      cursor: pointer;
-    }
- .nav-links ul { padding: 30px;}
- .nav-links ul li { padding: 10px 0 10px ;
+
+  h2{
+    display: flex;
+    justify-content: center;
+    padding: 40px  0 0 0;
+    font-size: 2rem;
+    color: rgb(54, 49, 82);
+    text-shadow: 2px 2px 4px #f7caeb;
+  }
+
+  .container{
+    justify-content: center;
+    align-items: center;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  flex-wrap: wrap;
+position: relative;
+bottom: 88px;
+  }
 
 
-}
-    button {
-       font-size: 10px;
-      width:60px ;
-      height:24px ;
-     position: relative;
-     top:  2px;
-left: 6%;
-display: block;
-padding: 0;
+  .card{
+    box-shadow: rgba(116, 114, 114, 0.15) 0px 5px 15px 0px;
+    width: 300px;
+    height: 180px;
+  cursor: pointer;
+  border:hidden;
+  margin: 20px;
+  border-radius: .2rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
 
-    }
-.menuClass{
-  right: 0;
-}
-.btn-1{       font-size: 12px;
-  position: relative;
-  left: 14%;
-  font-weight: 500;
-}
-.btn{
-  font-size: 10px;
-  position: relative;
-  left: 8%;
-  width:60px ;
-  height:30px ;
+  }
+  .card:hover{
+
+    transform: translateY(-0.5%);
+  box-shadow: 0rem  .5rem 1rem 0 rgb(166, 166, 202);
+
+  }
+
+  .card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    font-size: 15px;
+    padding: 1rem .8rem;
+    float: right;
+  font-weight: 600;
+  flex-direction: column;
+  text-align: center;
+  }
+
+.card i{
+
+  color:rgb(255, 255, 255);
+
+  border-radius: 50%;
+  width:35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+align-self: center;
+margin-top: 12px;
 
 }
-}
+.text-service{
 
+  font-size: 14px;
+  font-weight: 400;
+}
+.card-container h3 {
+font-size: 18px;
+font-weight: 520;
+}
+.card-container div{
+  font-size: 14px;
+  font-weight: 400;
+}
