--- a/src/app/core/components/layouts/side-nav/side-nav/side-nav.component.css
+++ b/src/app/core/components/layouts/side-nav/side-nav/side-nav.component.css
@@ -3,45 +3,125 @@
 }
 mat-sidenav-container {
   height: 100vh ;
+
 }
 mat-sidenav{
   width: 250px;
-  background-color: #b6adab;
-  color: #fff;
+  background-color: #e7e7e7;
+  color: rgb(255, 255, 255);
   padding: 1rem ;
 }
 main{
-  padding: 1rem;
+  padding: 1.2rem;
   min-height: calc(100vh - 66px) ;
 }
 .child-items{
-  padding-inline-start: 24px !important;
+  padding-inline-start: 28px !important;
 }
 
 a{
   text-decoration: none;
+  font-weight: 600;font-size: 24px;
 }
 .mat-icon{
-  color: rgb(5, 5, 5);
-  margin-inline-end: 10px;
+  color: rgb(0, 0, 0);
+
+
+
 }
 
-item-text{
-  color: #fff;
+.item-text{
+  color: rgb(0, 0, 0);
 font-weight: 600;
 }
 .content{
-  padding: 0.8rem;
+  padding: 1.6rem;
   min-height: 100%;}
+
+
 .example-icon{
 flex: 1 1 auto;
-padding: 0 14px;
-;
+padding: 30px 14px;
+
 }
 .btn{
-  position: absolute;
-  bottom: 8px;
-  left: 16px;
-  font-size: 18px;
-  right: 6px;
+display: block;
+position: relative;
+left:  34px;
+font-weight: 600;
+padding-top: 10px;
+
+}
+.icon-logout{
+display: block;
+top: 4px;
+font-weight: 600;
+}
+.loader {
+  color:  rgb(124, 27, 72);
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  position: relative;
+  top:50%;
+left: 50%;
+  text-indent: -9999em;
+  animation: mulShdSpin 1.3s infinite linear;
+  transform: translateZ(0);
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+@keyframes mulShdSpin {
+  0%,
+  100% {
+    box-shadow: 0 -3em 0 0.2em,
+    2em -2em 0 0em, 3em 0 0 -1em,
+    2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 -1em, -3em 0 0 -1em,
+    -2em -2em 0 0;
+  }
+  12.5% {
+    box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em,
+    3em 0 0 0, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 -1em, -3em 0 0 -1em,
+    -2em -2em 0 -1em;
+  }
+  25% {
+    box-shadow: 0 -3em 0 -0.5em,
+    2em -2em 0 0, 3em 0 0 0.2em,
+    2em 2em 0 0, 0 3em 0 -1em,
+    -2em 2em 0 -1em, -3em 0 0 -1em,
+    -2em -2em 0 -1em;
+  }
+  37.5% {
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+     3em 0em 0 0, 2em 2em 0 0.2em, 0 3em 0 0em,
+     -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
+  }
+  50% {
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+     3em 0 0 -1em, 2em 2em 0 0em, 0 3em 0 0.2em,
+     -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
+  }
+  62.5% {
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+     3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 0,
+     -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
+  }
+  75% {
+    box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em,
+    3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
+  }
+  87.5% {
+    box-shadow: 0em -3em 0 0, 2em -2em 0 -1em,
+    3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
+  }
+}
+img{
+  width:200px
 }
