--- a/src/app/core/components/layouts/side-nav/side-nav/side-nav.component.html
+++ b/src/app/core/components/layouts/side-nav/side-nav/side-nav.component.html
@@ -1,12 +1,12 @@
-
-
-
 <mat-sidenav-container>
   <mat-sidenav #snav>
-    <div  style="display: flex; justify-content: center;  "  *ngIf="loading"        >
-      <mat-spinner  diameter="20"  color="primary">  </mat-spinner>
-      </div>
-    <mat-list  *ngIf="!loading"   >
+      <div    class="loader"
+      role="status" *ngIf= "loader"  >
+        </div>
+
+    <mat-list  *ngIf="!loader"  >
+      <img src="https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/image%20(1).png?alt=media&token=19acc0f7-7c54-4131-9530-e361be4b956b" alt="">
+
       <div *ngFor="let item of navMune.children">
         <div *ngIf="item.children.length>0 else hasNoChildren">
           <mat-list-item >
@@ -18,12 +18,13 @@
               <a [routerLink]="[childItem.route]" *ngIf="childItem.role ===userData.role || childItem.role.length===0">
                 <mat-list-item class="child-items">
                   <mat-icon matListItemIcon>{{ childItem.icon }}</mat-icon>
-                  <div matListItemTitle class="item-text">{{ childItem.displayName }}</div>
+                  <div  matListItemTitle class="item-text">{{ childItem.displayName }}</div>
                 </mat-list-item>
               </a>
             </div>
 
         </div>
+
 
 
         <ng-template #hasNoChildren>
@@ -35,15 +36,18 @@
           </a>
         </ng-template>
       </div>
+
+    <button  class="btn" mat-button (click)="onLoggedoutClicked()">
+      <mat-icon class="icon-logout">logout</mat-icon> Log Out</button>
     </mat-list>
-    <button  class="btn" mat-button (click)="onLoggedoutClicked()"><mat-icon>logout</mat-icon> Logout</button>
   </mat-sidenav>
+
   <mat-sidenav-content>
 
     <mat-toolbar>
 
       <button mat-icon-button (click)="snav.toggle()">
-        <mat-icon style="color: #fab73f;">menu</mat-icon>
+        <mat-icon style="color: rgb(124, 27, 72);font-size: larger;">menu</mat-icon>
       </button>
       <span class="logo"></span>
       <span class="example-icon"></span>
