--- a/src/app/pages/approval/approvel-startup/approvel-startup.component.html
+++ b/src/app/pages/approval/approvel-startup/approvel-startup.component.html
@@ -1,6 +1,10 @@
 
-
-  <table mat-table [dataSource]="dataSource">
+<div    class="loader"
+role="status" *ngIf= "loader"  >
+  </div>
+<div *ngIf="!loader">
+<div class="main">
+  <table mat-table  class="startups_table" [dataSource]="dataSource">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef > Name </th>
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
@@ -12,6 +16,7 @@
       <td mat-cell *matCellDef="let row">
       <div  *ngFor="let item of row.sectors"  >  {{item.name}}     </div></td>
     </ng-container>
+
 
     <ng-container matColumnDef="emailaddress">
       <th mat-header-cell *matHeaderCellDef > Email Address </th>
@@ -39,7 +44,7 @@
         </button>
 
         <button mat-menu-item  (click)="onDeletClicked(row)">
-          <mat-icon>delete</mat-icon>
+          <mat-icon style="color: red;">delete</mat-icon>
           <span>Delete</span>
         </button>
       </mat-menu>
@@ -50,5 +55,5 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 </table>
-
-
+</div>
+</div>
