--- a/src/app/pages/home/list-sectors/list-sectors.component.css
+++ b/src/app/pages/home/list-sectors/list-sectors.component.css
@@ -9,7 +9,7 @@ h2{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: row;
+flex-direction: row;
 gap: 20px;
 flex-wrap: wrap;
 padding: 20px;
@@ -18,5 +18,23 @@ padding: 20px;
 .card{
   width: 300px;
   height: 74px;
-  border-radius: 24px;
+  border-radius: 24px;}
+
+img{
+  width: 50px;
+  height: 50px;
+  padding-top: 8px;
+
 }
+
+.content{
+  display: flex;
+  flex-direction: row;
+}
+.contentBx{
+justify-content: center;
+padding: 18px  18px 0 10px  ;
+}
+section{
+
+    background:rgb(253, 250, 250);}
