--- a/src/app/pages/sectors/sectors/sectors.component.css
+++ b/src/app/pages/sectors/sectors/sectors.component.css
@@ -10,11 +10,128 @@
   margin-inline-start: 10px;
   text-align:end;
 flex: 1;
+padding-bottom: 20px;
 }
-table{
-  width: 100%;
 
-}
 hover{
   cursor: pointer;
 }
+.header {
+  text-align: center;
+  padding: 32px;
+  font-weight: 620;
+  text-shadow: 1px 1px 2px black, 0 0 25px rgb(88, 88, 90), 0 0 5px rgb(228, 228, 228);
+}
+
+ table {
+  width: 100%;
+  position: relative;
+  padding: 0;
+
+
+}
+.example-header-image {
+
+  background-size: cover;
+}
+.example-card {
+  max-width: 360px;
+}
+
+
+
+th ,td{
+  padding: 2px !important;
+
+
+ }
+
+.content  {
+    left: 25%;
+    padding: 2rem;
+    min-height: 100%;
+    width: 50%;
+    position: relative;
+
+}
+
+@media (max-width:1300px) {
+
+.content  {
+
+  padding: .8rem;
+  left: 0;
+  width: 100%;
+  position: relative;
+
+}
+}
+ .loader {
+  color:  rgb(124, 27, 72);
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  position: relative;
+  top:50%;
+left: 50%;
+  text-indent: -9999em;
+  animation: mulShdSpin 1.3s infinite linear;
+  transform: translateZ(0);
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+@keyframes mulShdSpin {
+  0%,
+  100% {
+    box-shadow: 0 -3em 0 0.2em,
+    2em -2em 0 0em, 3em 0 0 -1em,
+    2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 -1em, -3em 0 0 -1em,
+    -2em -2em 0 0;
+  }
+  12.5% {
+    box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em,
+    3em 0 0 0, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 -1em, -3em 0 0 -1em,
+    -2em -2em 0 -1em;
+  }
+  25% {
+    box-shadow: 0 -3em 0 -0.5em,
+    2em -2em 0 0, 3em 0 0 0.2em,
+    2em 2em 0 0, 0 3em 0 -1em,
+    -2em 2em 0 -1em, -3em 0 0 -1em,
+    -2em -2em 0 -1em;
+  }
+  37.5% {
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+     3em 0em 0 0, 2em 2em 0 0.2em, 0 3em 0 0em,
+     -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
+  }
+  50% {
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+     3em 0 0 -1em, 2em 2em 0 0em, 0 3em 0 0.2em,
+     -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
+  }
+  62.5% {
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+     3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 0,
+     -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
+  }
+  75% {
+    box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em,
+    3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
+  }
+  87.5% {
+    box-shadow: 0em -3em 0 0, 2em -2em 0 -1em,
+    3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
+  }
+}
+
+
+
+
