--- a/src/app/pages/sectors/update-sector/update-sector.component.html
+++ b/src/app/pages/sectors/update-sector/update-sector.component.html
@@ -1,3 +1,8 @@
+<div    class="loader"
+role="status" *ngIf= "loader"  >
+  </div>
+<div *ngIf="!loader">
+
 <form [formGroup]="formGroup" >
 
   <label for="file" class="logo"><img [src]="imgSrc"  alt=""
@@ -16,7 +21,8 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Color</mat-label>
-      <input matInput placeholder="color" formControlName="color" >
+      <input matInput placeholder="color" formControlName="color"  type="color"
+      class="color">
       </mat-form-field>
 
     <mat-form-field appearance="outline">
@@ -30,9 +36,10 @@
     </mat-form-field>
 
    <div class="actions-section">
-      <button mat-raised-button color="primary" (click)="updateSectorCliked()" >
+      <button mat-raised-button style="background-color: black;color: #fff;" (click)="updateSectorCliked()" >
          Update Sectors</button>
    </div>
 
 </form>
 
+</div>
