--- a/src/app/pages/startups/add-startup/add-startup.component.css
+++ b/src/app/pages/startups/add-startup/add-startup.component.css
@@ -1,9 +1,45 @@
-form{
+*{margin: 0;
+padding: 0;}
+
+.row{
+background-image: url('https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/ff.jpg?alt=media&token=d6e08409-7969-46ea-8188-a5568ef274db');
+height: 100%;
+background-position:center ;
+background-size: cover;
+background-repeat: no-repeat;
+display: flex;
+width: 100%;
+position: relative;
+}
+
+h4,p {
   display: flex;
-  flex-direction: column;
-  gap: 12px;
   justify-content: center;
-  align-items: center;
+  color: rgb(0, 0, 0);
+  padding: 2rem  0  0 1rem;
+gap: 0;
+
+}
+p{
+  font-weight: 6rem;
+  font-size: 1.8rem;
+  padding-top:4rem ;
+
+}
+form{
+  align-content: center;
+  flex-direction: column;
+  gap: 6px;
+padding: 20px;
+  align-items: center ;
+width: 50%;
+border-radius: 8%;
+z-index: 1;
+display: flex;
+
+
+
+
 }
 #file{
  display: none;
@@ -17,26 +53,104 @@ form{
   flex-direction: column;
   align-items: center;
  justify-content: center;
- background-position: center;
- background-repeat: no-repeat;
- background-size: cover;
-
   border-radius: 50%;
-  background-image: Url('https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__480.png');
+background-image: url(https://firebasestorage.googleapis.com/v0/b/angular-c4826.appspot.com/o/lo.png?alt=media&token=3b1e159a-f8a7-4447-bfd8-5dfa917f3176);
+  font-size: 1rem;
   font-weight: 400;
-  padding: .7rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 1px solid rgb(223, 177, 223);
 }
+.logo:hover{
+box-shadow: .4rem 0 .8rem rgb(207, 182, 230);
+motion: 1;
+}
+
 button{
-  width: 100px;
+  width: 160px;
+  background-color: rgb(0, 0, 0) !important;
+  color: white !important;
 }
 mat-form-field{
-  width: 100%;
+  width: 88%;
 }
 .logo img{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  border-radius: 50%;
+border-radius:50% ;
   height: 100px;
   width: 100px;
+}
+
+@media screen and (max-width:700px){
+  form{ width: 100%;
+    }
+    .row{height: 100%;}
+}
+.loader {
+  color:  rgb(124, 27, 72);
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  position: relative;
+  top:50%;
+left: 50%;
+  text-indent: -9999em;
+  animation: mulShdSpin 1.3s infinite linear;
+  transform: translateZ(0);
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+@keyframes mulShdSpin {
+  0%,
+  100% {
+    box-shadow: 0 -3em 0 0.2em,
+    2em -2em 0 0em, 3em 0 0 -1em,
+    2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 -1em, -3em 0 0 -1em,
+    -2em -2em 0 0;
+  }
+  12.5% {
+    box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em,
+    3em 0 0 0, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 -1em, -3em 0 0 -1em,
+    -2em -2em 0 -1em;
+  }
+  25% {
+    box-shadow: 0 -3em 0 -0.5em,
+    2em -2em 0 0, 3em 0 0 0.2em,
+    2em 2em 0 0, 0 3em 0 -1em,
+    -2em 2em 0 -1em, -3em 0 0 -1em,
+    -2em -2em 0 -1em;
+  }
+  37.5% {
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+     3em 0em 0 0, 2em 2em 0 0.2em, 0 3em 0 0em,
+     -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
+  }
+  50% {
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+     3em 0 0 -1em, 2em 2em 0 0em, 0 3em 0 0.2em,
+     -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
+  }
+  62.5% {
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+     3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 0,
+     -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
+  }
+  75% {
+    box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em,
+    3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
+  }
+  87.5% {
+    box-shadow: 0em -3em 0 0, 2em -2em 0 -1em,
+    3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
+  }
 }
